# ai-news-bot

./: .env.example  README.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: claude.yml  daily-news.yml
src/notifiers/: email_notifier.py
