[project]
name = "ai-news-bot"
version = "0.1.0"
description = "AI News Bot"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "agentmail>=0.5.6",
    "distro>=1.9.0",
    "docstring-parser>=0.18.0",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "sniffio>=1.3.1",
    "typing-extensions>=4.16.0",
]
